account has login contact has message page

--- a/images/products.html
+++ b/images/products.html
@@ -8,7 +8,7 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200;1,300;1,600;1,700&display=swap" rel="stylesheet">"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200;1,300;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -21,11 +21,11 @@
       </div>
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Products</a></li>
-          <li><a href="">Search</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Account</a></li>
+          <li><a href="./text.html">Home</a></li>
+          <li><a href="./products.html">Products</a></li>
+          <li><a href="./search.html">Search</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./account.html">Account</a></li>
         </ul>
       </nav>
       <img src="./menu.jpg" class="menu-icon"
